# pymorfeusz2

./: .mise.toml  CMakeLists.txt  LICENSE  README.md  autogenerate_bindings.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
src/pymorfeusz2/: __init__.pyi  module.cpp  pybind_Morfeusz2.cpp
