[project]
name = "pymorfeusz2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Janusz Dziurzyński", email = "janusz@forserial.org"},
]
dependencies = [
    "litgen @ git+https://github.com/pthom/litgen",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
generate = 'python3 autogenerate_bindings.py'

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "ruff>=0.6.2",
]
